reorganized chicken game, problem with egg animation and spawning

--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,8 @@
     <body>
         <script src="/socket.io/socket.io.js"></script>
         <script src="//cdn.jsdelivr.net/npm/phaser@3.3.0/dist/phaser.min.js"></script>
-        <script type="text/javascript" src="js/egg.js"></script>
-        <script src="js/Scene1.js"></script>
-        <script src="js/Scene2.js"></script>
+        <script src="js/egg.js"></script>
+        <script src="js/chicken.js"></script>
         <script src="js/game.js"></script>
     </body>
 </html>
