added procfile for heroku deployment

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <script src="/socket.io/socket.io.js"></script>
+        <script src="//cdn.jsdelivr.net/npm/phaser@3.3.0/dist/phaser.min.js"></script>
         <script src="js/egg.js"></script>
         <script src="js/Scene1.js"></script>
         <script src="js/Scene2.js"></script>
