--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,15 @@
 <html>
     <head>
         <meta charset="utf-8" />
+        <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
     <body>
-        <script src="/socket.io/socket.io.js"></script>
-        <script src="//cdn.jsdelivr.net/npm/phaser@3.3.0/dist/phaser.min.js"></script>
-        <script src="js/egg.js"></script>
-        <script src="js/Scene1.js"></script>
-        <script src="js/Scene2.js"></script>
-        <script src="js/game.js"></script>
+        <img id="game-header" src="assets/game-header.png" />
     </body>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.3.0/dist/phaser.min.js"></script>
+    <script src="js/egg.js"></script>
+    <script src="js/Scene1.js"></script>
+    <script src="js/Scene2.js"></script>
+    <script src="js/game.js"></script>
 </html>
