--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,12 @@
     </head>
     <body>
         <img id="game-header" src="assets/game-header.png" />
+        <img id="arrow-keys" src="assets/arrow-key-instructions.png" />
+        <img id="wsad-keys" src="assets/wsad-key-instructions.png" />
+        <button id="play-again" onclick="location.reload();">
+            New Game</button
+        >;
+        <img id="arcade-background" src="assets/arcade-background.png" />
     </body>
     <script src="/socket.io/socket.io.js"></script>
     <script src="//cdn.jsdelivr.net/npm/phaser@3.3.0/dist/phaser.min.js"></script>
