added retro arcade styling and sound effects, attempted throttling for smoother gameplay

--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,7 @@
         <img id="game-header" src="assets/game-header.png" />
         <img id="arrow-keys" src="assets/arrow-key-instructions.png" />
         <img id="wsad-keys" src="assets/wsad-key-instructions.png" />
-        <button id="play-again" onclick="location.reload();">
-            New Game</button
-        >;
+        <img id="play-again" src="assets/new-game-button.png" onclick="location.reload();" />
         <img id="arcade-background" src="assets/arcade-background.png" />
     </body>
     <script src="/socket.io/socket.io.js"></script>
